--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                                             <li><span>Project Management:</span> <br>IT Budgeting, Business Process Automation, IT software develpment, IT Talent Development</li>
                                 
                                         </ul>
+                                        <div class="download-cv">
+                                            <a href="files/Erick_Chomba_Resume[1].pdf" download>Download CV</a>
+                                        </div>
+                                        
                                 </div>
 
                                 <div class="tab-contents"id="key projects">
@@ -204,6 +208,7 @@
         }
 
     </script>
+
     <!-----------contact------------>
         <a id="contact"></a>
         <div class="contact" id="contact">
