--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </ul>
                 </div>
                 <div class="contact-form">
-                <form action="https://formspree.io/f/your-form-id" method="POST">
+                <form action="contact.php" method="POST">
                     <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required>
