--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="about">
             <div class="row">
                         <div class="about-col-1">
-                            <img src="images/developer.png" alt="chombas image">
+                            <img src="images/passport.jpg" alt="chombas image">
                         </div>
                         <div class="about-col-2">
                             <h1 class="sub-title">About Me</h1>
@@ -227,16 +227,16 @@
                 <div class="contact-form">
                 <form action="contact.php" method="POST">
                     <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required>
                     </div>
                     <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" class="form-control" placeholder="Your Email" required>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" class="form-control" placeholder="Your Email" required>
                     </div>
                     <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" class="form-control" rows="5" placeholder="Your Message" required></textarea>
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" class="form-control" rows="5" placeholder="Your Message" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
