--- a/index.html
+++ b/index.html
@@ -213,17 +213,8 @@
         <a id="contact"></a>
         <div class="contact" id="contact">
             <div class="container">
-            <h1 class="sub-title">Contact Me</h1>
-            <div class="row">
-                <div class="contact-info">
-                <ul>
-                    <li><i class="bi bi-envelope"></i> <strong>Email:</strong> chombaerickdickson@gmail.com</li>
-                    <li><i class="bi bi-phone"></i> <strong>Phone:</strong> +254704855562</li>
-                    <li><i class="bi bi-linkedin"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/erick-chomba-898a17115/">Erick Chomba</a></li>
-                    <li><i class="bi bi-github"></i> <strong>GitHub:</strong> <a href="https://github.com/ch0mba">ch0mba</a></li>
-                    <li><i class="bi bi-globe"></i> <strong>Website:</strong> <a href="https://eclast.co.ke/portfolio">Portfolio</a></li>
-                </ul>
-                </div>
+                </body>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"></script>
                 <div class="contact-form">
                 <form action="contact.php" method="POST">
                     <div class="form-group">
@@ -245,7 +236,36 @@
             </div>
         </div>
 
-        <footer><p>&copy; 2025 Chomba. All rights reserved</p></footer>
+        <footer>
+            <div class="container-footer">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h1 class="sub-title">Contact Me</h1>
+                                    <div class="contact-info">
+                                        <ul>
+                                            <li><i class="bi bi-envelope"></i> <strong>Email:</strong> chombaerickdickson@gmail.com</li>
+                                            <li><i class="bi bi-phone"></i> <strong>Phone:</strong> +254704855562</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <h1 class="sub-title">Social Media</h1>
+                                    <div class="social-media">
+                                        <style>
+                                            ul {
+                                                list-style: none;
+                                            }
+                                        </style>
+                                        <ul>
+                                            <li><i class="bi bi-linkedin"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/erick-chomba-898a17115/">Erick Chomba</a></li>
+                                            <li><i class="bi bi-github"></i> <strong>GitHub:</strong> <a href="https://github.com/ch0mba">ch0mba</a></li>
+                                            <li><i class="bi bi-globe"></i> <strong>Website:</strong> <a href="https://eclast.co.ke/portfolio">Portfolio</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+            <p>&copy; 2025 Chomba. All rights reserved</p></footer>
     </body>
     <script scr="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"></script>
 </html>
